--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "base-64": "^1.0.0",
+    "crypto": "^1.0.1",
     "expo": "~49.0.15",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
+    "nanoid": "^5.0.4",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-get-random-values": "^1.10.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.11.4",
+    "react-native-web": "~0.19.6",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2"
   },
   "private": true
 }
